# lab_nmt

./: .gitignore  pyproject.toml  run.sh  run_sentencepiece.py  sentencepiece.py  train_transformer_nn.py  utils.py
models/attention_seq2seq/: attention_seq2seq.py
models/transformer/: transformer.py
models/transformer_kaggle/: transformerik.py
models/transformer_nn/: transformer_nn copy.py  transformer_nn.py  transformer_nn_nopos.py
models/vanilla_seq2seq/: vanilla_seq2seq.py
utils/: backup.py  init_weights.py  load_vocabs.py  moving_average.py  translate.py  utils_sp copy.py  utils_sp.py
