[tool.poetry]
name = "lab-nmt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.6.0+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.21.0+cpu", source = "pytorch_cpu"}
sentencepiece = "^0.2.0"
torchtext = "0.4.0"
tensorboard = "^2.18.0"
nltk = "^3.9.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
